--- a/apworlds.html
+++ b/apworlds.html
@@ -51,11 +51,12 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (201)</h2>
+                <h2>APWorlds (204)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
+                <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
@@ -143,7 +144,7 @@
                 <small><a href="#HatsuneMikuProjectDivaMegaMix">Hatsune Miku: Project Diva Mega Mix+ (PC)</a></small>
                 <small><a href="#Heretic">Heretic (PC)</a></small>
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
-                <small><a href="#Huniepop2DoubleDate">Huniepop 2: Double Date (PC)</a></small>
+                <small><a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
@@ -254,7 +255,9 @@
                 <small><a href="#Shapez">Shapez (PC)</a></small>
                 <small><a href="#Shivers">Shivers (PC)</a></small>
                 <small><a href="#SidMeiersCivilization6">Sid Meier's Civilization VI (PC)</a></small>
+                <small><a href="#SimonTathamsPortablePuzzleCollection">Simon Tatham's Portable Puzzle Collection (Web)</a></small>
                 <small><a href="#SlayTheSpire">Slay the Spire (PC)</a></small>
+                <small><a href="#SlyCooperAndTheThieviusRaccoonus">Sly Cooper and the Thievius Raccoonus (PS2)</a></small>
                 <br />
                 <small>[Sonic Franchise]</small>
                 <small>&emsp;<a href="#SonicAdventureDX">Sonic Adventure DX (PC)</a></small>
@@ -333,6 +336,13 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
+                </ul>
+                
+                <h3><span id="SpoilerFreeTextClient"></span> Spoiler-Free Text Client (Meta)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1282381904812970096/1282382016087851018">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1282381904812970096">Link</a>]</li>
                 </ul>
 
                 <h3><span id="UniversalTracker"></span> Universal Tracker (Meta)</h3>
@@ -432,7 +442,7 @@
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1279505267784159344">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1281312490940006482">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/Ape-Escape-Tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
@@ -450,7 +460,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Client</strong> [<a href="https://idle.multiworld.link/">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://idle.multiworld.link/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ArchipelagoMW/Archipelago/blob/main/worlds/archipidle/docs/guide_en.md">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1079931647320932412">Link</a>]</li>
                 </ul>
@@ -625,7 +635,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Client</strong> [<a href="http://clique.pharware.com/">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="http://clique.pharware.com/">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/ScipioWright/Clique-PopTracker/releases/latest">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Clique/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090815835825774683">Link</a>]</li>
@@ -846,7 +856,7 @@
                 <h3><span id="FNaFWorld"></span><span id="FNAFWorld"></span> FNaF World (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1262058847397220445">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1280258981906092032">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1195152241250795590">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1187854264375193721">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1104088448127729704">Link</a>]</li>
@@ -932,7 +942,7 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
                 </ul>
 
-                <h3><span id="Huniepop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
+                <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
@@ -945,6 +955,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/TRPG0/ArchipelagoHylics2/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/superfid2006/Hylics2-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Hylics%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593298247417929">Link</a>]</li>
                 </ul>
@@ -1133,7 +1144,7 @@
                 <h3><span id="SuperMarioLand26GoldenCoins"></span><span id="SuperMarioLand2"></span> Super Mario Land 2: 6 Golden Coins (GB)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1262196770167980072">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1282532055909138454">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Alchav/Archipelago/blob/mario-land-2/worlds/marioland2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1182783218404040814">Link</a>]</li>
                 </ul>
@@ -1631,7 +1642,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/madisonsilver/SeedlingArchipelagoWorld/releases">Link</a>]</li>
-                    <li><strong>Client</strong> [<a href="https://madisonsilver.github.io/seedling/">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://madisonsilver.github.io/seedling/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/madisonsilver/SeedlingArchipelagoWorld/blob/main/seedling/docs/multiworld_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141542795966943254">Link</a>]</li>
                 </ul>
@@ -1670,6 +1681,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1235473969487024189">Link</a>]</li>
                 </ul>
 
+                <h3><span id="SimonTathamsPortablePuzzleCollection"></span> Simon Tatham's Portable Puzzle Collection (Web)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1278733078516207719/1282558989627949117">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://ishanpm.github.io/ap-sgtpuzzles-web/">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278733078516207719">Link</a>]</li>
+                </ul>
+
                 <h3><span id="SlayTheSpire"></span> Slay the Spire (PC)</h3>
 
                 <ul>
@@ -1678,6 +1697,14 @@
                     <li><strong>Optional Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1610056683">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Slay%20the%20Spire/slay-the-spire/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/884926940182609920">Link</a>]</li>
+                </ul>
+
+                <h3><span id="SlyCooperAndTheThieviusRaccoonus"></span> Sly Cooper and the Thievius Raccoonus (PS2)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/hoppel16/ArchipelagoBranchSly1/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/hoppel16/ArchipelagoBranchSly1/blob/main/worlds/sly1/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170557242660093952">Link</a>]</li>
                 </ul>
 
                 <h3><span id="SonicAdventureDX"></span> Sonic Adventure DX (PC)</h3>
@@ -1933,7 +1960,7 @@
                 <h3><span id="ToejamAndEarl"></span> Toejam & Earl (GEN)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1204326236415856671/1279386992660058162">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/IgnisUmbrae/TJE-Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1204326236415856671">Link</a>]</li>
                 </ul>
 
@@ -1942,8 +1969,8 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
-                    <li><strong>Beta APWorld + Game Mod</strong> Logic and ER Options - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1271979717246980217">Link</a>]</li>
-                    <li><strong>Alternate APWorld + Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1272035268144271430">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1282378388514017352">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1282378892727947401">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
                     <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
@@ -2010,7 +2037,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1264645125276041267">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1281285774305660989">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
@@ -2037,7 +2064,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spinerak/ArchipelagoYachtDice/releases">Link</a>]</li>
-                    <li><strong>Hosted Game</strong> [<a href="http://yacht-dice-ap.netlify.app/">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="http://yacht-dice-ap.netlify.app/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/spinerak/ArchipelagoYachtDice/blob/main/worlds/yachtdice/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1217570899549491411">Link</a>]</li>
                 </ul>
