--- a/index.html
+++ b/index.html
@@ -45,7 +45,81 @@
                     </p>
                 </header>
 
-                <h2 id="D20240813">Week of August 26 - September 1, 2024</h2>
+                <h2 id="W202436">Week of September 2-8, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy IV [<a href="apworlds.html#FinalFantasy4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasy12OpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> FNaF World [<a href="apworlds.html#FNaFWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project Diva Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDivaMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Inscryption [<a href="apworlds.html#Inscryption">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keep Talking and Nobody Explodes [<a href="apworlds.html#KeepTalkingAndNobodyExplodes">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> KINGDOM HEARTS Birth by Sleep FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSBirthBySleepFINALMIX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> KINGDOM HEARTS FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSFINALMIX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2: 6 Golden Coins [<a href="apworlds.html#SuperMarioLand26GoldenCoins">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasy12OpenWorld">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Inscryption [<a href="apworlds.html#Inscryption">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Keep Talking and Nobody Explodes [<a href="apworlds.html#KeepTalkingAndNobodyExplodes">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Mindustry [<a href="apworlds.html#Mindustry">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 3 (Remake) [<a href="apworlds.html#ResidentEvil3">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Rogue Legacy [<a href="apworlds.html#RogueLegacy">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Simon Tatham's Portable Puzzle Collection [<a href="apworlds.html#SimonTathamsPortablePuzzleCollection">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#SlyCooperAndTheThieviusRaccoonus">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Spoiler-Free Text Client [<a href="apworlds.html#SpoilerFreeTextClient">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Hylics 2 [<a href="apworlds.html#Hylics2">Link</a>]</li>
+                </ul>
+
+                <h2 id="W202435">Week of August 26 - September 1, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
@@ -66,12 +140,12 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
-                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                     <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
@@ -89,7 +163,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>New APWorld</strong> Huniepop 2: Double Date [<a href="apworlds.html#Huniepop2DoubleDate">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Huniepop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
                     <li><strong>New APWorld</strong> Local YAML Creator [<a href="apworlds.html#LocalYAMLCreator">Link</a>]</li>
                     <li><strong>New APWorld</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
                     <li><strong>New APWorld</strong> The Legend of Zelda: Oracle of Ages [<a href="apworlds.html#TheLegendOfZeldaOracleOfAges">Link</a>]</li>
@@ -102,7 +176,7 @@
                     <li><strong>New Tracker</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
                 </ul>
 
-                <h2 id="D20240813">Week of August 19-25, 2024</h2>
+                <h2 id="W202434">Week of August 19-25, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
@@ -136,13 +210,13 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
                 </ul>
 
                 <ul>
-                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -179,7 +253,7 @@
                     <li><strong>New Game PR Opened</strong> Mega Man X3 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3844">Link</a>]</li>
                 </ul>
 
-                <h2 id="D20240812">Week of August 12-18, 2024</h2>
+                <h2 id="W202433">Week of August 12-18, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
@@ -209,14 +283,14 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
                 </ul>
 
                 <ul>
-                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
                     <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                     <li><strong>Beta Game Mod Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
                 </ul>
